--- a/_practice/2023-09-21.md
+++ b/_practice/2023-09-21.md
@@ -1,6 +1,6 @@
 badge steps marked **lab** are steps that you will be encouraged to use lab time to work on. 
 
-1. Update your KWL chart with the new items and any learned items.
+1. Update your KWL chart with any learned items.
 2. Get set up so that you can pull from the introcompsyss/fall2023 repo and push to your own fork of the class website by cloning the main repo, then forking it and adding your fork as an additional [remote](https://docs.github.com/en/get-started/getting-started-with-git/managing-remote-repositories#adding-a-remote-repository). Append the commands used and the contents of your `fall2023/.git/config`to a {index}`terminalpractice.md` (hint: `history` outputs recent commands and redirects can work with any command, not only echo).  Based on what you know so far about forks and branches, what advantage does this setup provide? (answer in the `terminal_practice.md`) 
 3. **lab** Organize the provided messy folder (details will be provided in lab time). Commit and push the changes. Clone that repo locally. 
 4. For extra practice, re/organize a folder on your computer ( good candidate may be  desktop or downloads folder), using only a terminal to make new directories, move files, check what's inside them, etc. Answer reflection questions in a new file, {index}`terminal_organization_adv.md` in your kwl repo. Tip: Start with a file explorer open, but then try to close it, and use only command line tools to explore and make your choices. If you get stuck, look up additional commands to do acomplish your goals.  
